RESOLVED FIXED37033
[chromium] font fallback for generic fonts picks wrong font
https://bugs.webkit.org/show_bug.cgi?id=37033
Summary [chromium] font fallback for generic fonts picks wrong font
Evan Martin
Reported 2010-04-02 11:36:57 PDT
[chromium] font fallback for generic fonts picks wrong font
Attachments
Patch (2.71 KB, patch)
2010-04-02 11:45 PDT, Evan Martin
no flags
Patch (2.30 KB, patch)
2010-04-02 13:07 PDT, Evan Martin
no flags
Evan Martin
Comment 1 2010-04-02 11:45:26 PDT
Evan Martin
Comment 2 2010-04-02 11:46:23 PDT
I would like to write a test for this, but it relies on which fonts are available or not on your OS. The previous incarnation of this code landed without a test as well.
Eric Seidel (no email)
Comment 3 2010-04-02 12:59:46 PDT
Comment on attachment 52431 [details] Patch So i'm confused by why adding "-webkit-" makes the logic right. I don't really know what the "-webkit-" magic font family names are for? Also, is this tested? If so, how? What tests need updates? Is it not possible to test due to needing a specific system config? r- for the lack of testing or explanation thereof.
Eric Seidel (no email)
Comment 4 2010-04-02 13:00:51 PDT
OK. I now read the bug comment which explained lack of testing (ideally that would be in the ChangeLog). So I'm just missing the understanding of what the "-webkit-" part does...
Evan Martin
Comment 5 2010-04-02 13:07:46 PDT
Eric Seidel (no email)
Comment 6 2010-04-02 13:08:41 PDT
Comment on attachment 52441 [details] Patch THanks.
WebKit Commit Bot
Comment 7 2010-04-02 15:23:32 PDT
Comment on attachment 52441 [details] Patch Clearing flags on attachment: 52441 Committed r57027: <http://trac.webkit.org/changeset/57027>
WebKit Commit Bot
Comment 8 2010-04-02 15:23:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.